Fix z-index

--- a/assets/dev/scss/helpers/variables.scss
+++ b/assets/dev/scss/helpers/variables.scss
@@ -134,7 +134,7 @@ $second-layer: 2;
 $third-layer: 3;
 $fourth-layer: 4;
 
-$element-overlay: 9999;
+$element-overlay: 9998;
 $editor-layer: 9999;
 $elementor-modal: 10001;
 
